--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.3",
+    "@angular/cdk": "^11.0.1",
     "@angular/common": "^11.0.3",
     "@angular/compiler": "^11.0.3",
     "@angular/core": "^11.0.3",
     "@angular/forms": "^11.0.3",
+    "@angular/material": "^11.0.1",
     "@angular/platform-browser": "^11.0.3",
     "@angular/platform-browser-dynamic": "^11.0.3",
     "@angular/router": "^11.0.3",
@@ -28,11 +30,11 @@
     "@angular/cli": "^11.0.3",
     "@angular/compiler-cli": "^11.0.3",
     "@angular/language-service": "^11.0.3",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.8",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "codelyzer": "^6.0.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
