--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.3",
-    "@angular/cdk": "^11.0.1",
-    "@angular/common": "^11.0.3",
-    "@angular/compiler": "^11.0.3",
-    "@angular/core": "^11.0.3",
-    "@angular/forms": "^11.0.3",
-    "@angular/material": "^11.0.1",
-    "@angular/platform-browser": "^11.0.3",
-    "@angular/platform-browser-dynamic": "^11.0.3",
-    "@angular/router": "^11.0.3",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.0.0",
+    "@angular/animations": "^11.2.11",
+    "@angular/cdk": "^11.2.10",
+    "@angular/common": "^11.2.11",
+    "@angular/compiler": "^11.2.11",
+    "@angular/core": "^11.2.11",
+    "@angular/forms": "^11.2.11",
+    "@angular/material": "^11.2.10",
+    "@angular/platform-browser": "^11.2.11",
+    "@angular/platform-browser-dynamic": "^11.2.11",
+    "@angular/router": "^11.2.11",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.2.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.3",
-    "@angular/cli": "^11.0.3",
-    "@angular/compiler-cli": "^11.0.3",
-    "@angular/language-service": "^11.0.3",
-    "@types/jasmine": "^3.6.2",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.2.10",
+    "@angular/compiler-cli": "^11.2.11",
+    "@angular/language-service": "^11.2.11",
+    "@types/jasmine": "^3.6.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.8",
+    "@types/node": "^12.20.11",
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -44,6 +44,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "^4.0.7"
   }
 }
