--- a/package.json
+++ b/package.json
@@ -11,37 +11,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.2",
-    "@angular/common": "^10.2.2",
-    "@angular/compiler": "^10.2.2",
-    "@angular/core": "^10.2.2",
-    "@angular/forms": "^10.2.2",
-    "@angular/platform-browser": "^10.2.2",
-    "@angular/platform-browser-dynamic": "^10.2.2",
-    "@angular/router": "^10.2.2",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.0.0",
-    "zone.js": "^0.10.3"
+    "@angular/animations": "^11.2.13",
+    "@angular/cdk": "^11.2.12",
+    "@angular/common": "^11.2.13",
+    "@angular/compiler": "^11.2.13",
+    "@angular/core": "^11.2.13",
+    "@angular/forms": "^11.2.13",
+    "@angular/material": "^11.2.12",
+    "@angular/platform-browser": "^11.2.13",
+    "@angular/platform-browser-dynamic": "^11.2.13",
+    "@angular/router": "^11.2.13",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.2.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.2",
-    "@angular/language-service": "^10.2.2",
-    "@types/jasmine": "^3.6.1",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.3",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "@angular-devkit/build-angular": "^0.1102.12",
+    "@angular/cli": "^11.2.12",
+    "@angular/compiler-cli": "^11.2.13",
+    "@angular/language-service": "^11.2.13",
+    "@types/jasmine": "^3.7.1",
+    "@types/jasminewd2": "~2.0.9",
+    "@types/node": "^15.0.2",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.6.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "^4.1.5"
   }
 }
